--- a/dbpedia/2015-10/class-langs.html
+++ b/dbpedia/2015-10/class-langs.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
 
-    <title>DBpedia classes tree</title>
+    <title>DBpedia Class Tree</title>
 
     <style>
 
@@ -27,7 +27,7 @@
 
   <body>
 
-  <h2> DBpedia classes (with number of DBpedia language chapters using them) </h2>
+  <h2> DBpedia (2015-10) classes with the number of DBpedia Language chapters using them  </h2>
 
 <!-- load the d3.js library -->	
 <script src="http://d3js.org/d3.v3.min.js"></script>
