--- a/dbpedia/2015-10/class-langs.html
+++ b/dbpedia/2015-10/class-langs.html
@@ -27,7 +27,7 @@
 
   <body>
 
-  <h2> DBpedia (2015-10) classes with the number of DBpedia Language chapters using them  </h2>
+  <h2> DBpedia (2015-10) classes with the number of DBpedia language chapters using them  </h2>
 
 <!-- load the d3.js library -->	
 <script src="http://d3js.org/d3.v3.min.js"></script>
