--- a/dbpedia/2015-10/class-langs.html
+++ b/dbpedia/2015-10/class-langs.html
@@ -58,9 +58,9 @@
   <h2> DBpedia classes (with number of DBpedia language chapters using them) </h2>
 
 <div>
-   <p> Legend: </p>
 	<table>
 	 <tr>
+	 	<td>Legend: </td>
 		<td><div class="foo red"></div> Used in 0 langs</td>
 		<td><div class="foo orange"></div> Used in only 1 lang</td>
 		<td><div class="foo black"></div> Used in 2 ~ 10 langs</td>
