--- a/sdsvoc/index.html
+++ b/sdsvoc/index.html
@@ -83,15 +83,15 @@
         <ul>
             <li>Dataset descriptions
                 <ul>
-                    <li>Generic - DCMI, DCAT</li>
-                    <li>RDF - VoID, Aether VoID extension, HCLS Distribution Level Description, LODStats, RDFStats, ProLOD++,ExpLOD, ABSTAT</li>
+                    <li>Generic - <a href="http://dublincore.org/">DCMI</a>, <a href="https://www.w3.org/TR/vocab-dcat/">DCAT</a></li>
+                    <li>RDF - <a href="https://www.w3.org/TR/void/">VoID</a>, <a href="http://ldf.fi/void-ext">Aether VoID extension</a>, <a href="https://www.w3.org/TR/hcls-dataset/">HCLS Distribution Level Description</a>, <a href="http://stats.lod2.eu/">LODStats</a>, <a href="http://rdfstats.sourceforge.net/">RDFStats</a>, <a href="https://hpi.de/naumann/projects/data-profiling-and-analytics/prolod.html">ProLOD++</a>,<a href="http://link.springer.com/chapter/10.1007%2F978-3-642-13489-0_19#page-1">ExpLOD</a>, <a href="http://abstat.disco.unimib.it:8880/">ABSTAT</a></li>
                 </ul>
             </li>
         </ul>
         <ul>
           <li>Dataset searches
                 <ul>
-                    <li>datahub, lodsearch.org, Sindice, Semplore, VisiNav, Semantic Sitemaps, DING!, ...</li>
+                    <li><a href="https://datahub.io/">datahub</a>, <a href="http://lodsearch.org/">lodsearch.org</a>, Sindice, Semplore, VisiNav, Semantic Sitemaps, DING!, ...</li>
                 </ul>
             </li>
         </ul>
