--- a/sdsvoc/index.html
+++ b/sdsvoc/index.html
@@ -277,7 +277,7 @@ ex:RestaurantShape a sh:Shape ;
     <div id="hidden" style="display:none;">
     <div id="header">
         <div id="header-left"></div>
-        <div id="header-right"><img src="img/upm-oeg.jpg"  /></div>
+        <div id="header-right"><a href="http://www.oeg-upm.net/"><img src="img/upm-oeg.jpg"  /></a></div>
         <div id="footer-left"></div>
     </div>
     </div>
@@ -323,7 +323,7 @@ ex:RestaurantShape a sh:Shape ;
       }(document, "script", "twitter-wjs"));
     </script>
       
-    <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
+    <script src="/js/jquery-2.2.4.min.js"></script>
     <script type="text/javascript">
     // 3. On Reveal.js ready event, copy header/footer <div> into each `.slide-background` <div>
     var header = $('#header').html();
