--- a/index.html
+++ b/index.html
@@ -1,74 +1,268 @@
-<!DOCTYPE html>
-<html>
-
+<!doctype html>
+<html lang="en">
   <head>
-    <meta charset='utf-8' />
-    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="Nandana.github.io : My Github pages repository " />
-
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-
-    <title>Nandana.github.io</title>
+    <meta charset="utf-8">
+    <title>Data-Driven RDF Property Semantic-Equivalence Detection using NLP Techniques</title>
+    <script type="text/x-mathjax-config">
+      MathJax.Hub.Config({
+      tex2jax: {
+      inlineMath: [ ['$','$'], ["\\(","\\)"] ],
+      processEscapes: true
+      }
+      });
+    </script>
+    <script type="text/javascript" async src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-MML-AM_CHTML"></script>
+    <meta name="description" content="EKAW2016">
+    <meta name="author" content="Nandana Mihindukulasooriya">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, minimal-ui">
+    <link rel="stylesheet" href="css/reveal.css">
+    <link rel="stylesheet" href="css/theme/solarized.css" id="theme">
+    <!-- Code syntax highlighting -->
+    <link rel="stylesheet" href="lib/css/zenburn.css">
+    <!-- Printing and PDF exports -->
+    <script>
+      var link = document.createElement( 'link' );
+      link.rel = 'stylesheet';
+      link.type = 'text/css';
+      link.href = window.location.search.match( /print-pdf/gi ) ? 'css/print/pdf.css' : 'css/print/paper.css';
+      document.getElementsByTagName( 'head' )[0].appendChild( link );
+    </script>
+    <!--[if lt IE 9]>
+        <script src="lib/js/html5shiv.js"></script>
+        <![endif]-->
+    <link rel="stylesheet" href="css/custom.css">
   </head>
-
   <body>
+    <div class="reveal">
+      <div class="slides">
+	
+        <section>
+          <h2><b>Data-Driven RDF Property </br> Semantic-Equivalence Detection </br> using NLP Techniques</b></h2>
+	  <h5>Mariano Rico, <b>Nandana Mihindukulasooriya</b>, and Asunción Gómez Pérez </h5>
+          <h5>Ontology Engineering Group, Universidad Politécnica de Madrid</h5>
+          <br/>
+          <br/>
+          <h5>Acknowledgments:<br/>
+              4V: Volumen, Velocidad, Variedad y Validez en la Gestin Innovadora de Datos</h5>
+	  <!--
+          <h5>November 14<sup>th</sup>, 2016</h5>
+          <h5>Wouter Beek</h5>
+	  -->
+        </section>
 
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/nandana">View on GitHub</a>
+	<section>
+	  <h3>Motivation - DBpedia Use Case</h3>
+	  <img src="img/dbpedia.png">
+	</section>
 
-          <h1 id="project_title">Nandana.github.io</h1>
-          <h2 id="project_tagline">My Github pages repository </h2>
+	<section>
+	  <h3>English DBpedia 2016-04</h3>
+      <p>
+        <code><b>1445</b> DBpedia ontology properties are used!</code>
+      </p>
+        <p class="fragment">and when there is no mapping ...</p>
+        <p class="fragment"> <span style="color: red">63891</span> auto-generated properties (Only English)</p>
+        <p class="fragment"> a lot more in each language-specific DBpedia datasets</p>
+	</section>
 
-        </header>
+  <section>
+      <h3>dbo:birthPlace relation</h3>
+      <h4>Similar strings - capitalization, typos, prepositions, ... </h4>
+      <div style="position:relative; width:640px; height:480px; margin:0 auto;">
+          <img width="640" height="480" src="img/1.png" style="position:absolute;top:0;left:0;" />
+      </div>
+  </section>
+
+          <section>
+              <h3>dbo:birthPlace relation</h3>
+              <h4>Synonyms, related words </h4>
+              <div style="position:relative; width:640px; height:480px; margin:0 auto;">
+                  <div style="position:relative; width:640px; height:480px; margin:0 auto;">
+                      <img class="fragment fade-out" data-fragment-index="0" width="640" height="480" src="img/1.png" style="position:absolute;top:0;left:0;" />
+                      <img class="fragment fade-in" data-fragment-index="0" width="640" height="480" src="img/2.png" style="position:absolute;top:0;left:0;" />
+                  </div>
+              </div>
+          </section>
+
+
+          <section>
+              <h3>dbo:birthPlace relation</h3>
+              <h4>Other languages</h4>
+              <div style="position:relative; width:640px; height:480px; margin:0 auto;">
+                  <div style="position:relative; width:640px; height:480px; margin:0 auto;">
+                      <img class="fragment fade-out" data-fragment-index="0" width="640" height="480" src="img/2.png" style="position:absolute;top:0;left:0;" />
+                      <img class="fragment fade-in" data-fragment-index="0" width="640" height="480" src="img/3.png" style="position:absolute;top:0;left:0;" />
+                  </div>
+              </div>
+          </section>
+
+    <section>
+        <h3>What's their impact?</h3>
+        <img src="img/graph.jpg">
+    </section>
+
+	<section>
+	  <p>Let's make a query!</p>
+
+      <p style="text-align: left">Dear DBpedia, please tell me the landmarks and buildings where Guglielmo Marconi was born.</p>
+	  <pre>
+	    <code>
+select ?attraction where {
+      dbr:Guglielmo_Marconi  dbo:birthPlace ?place .
+
+      ?attraction a schema:LandmarksOrHistoricalBuildings;
+                dbo:location ?place .
+    }
+            </code>
+          </pre>
+	</section>
+
+
+          <section>
+              <h2>Hypothesis</h2>
+              <p>If we can detect RDF property semantic-equivalences, SPARQL queries can be enhanced to get better results!</p>
+
+          </section>
+
+
+          <section>
+              <h3>How to detect property semantic-equivalences? </h3>
+              <ul>
+                  <li class="fragment">
+                      <p>Structural characteristics</p>
+                      <ul><li>Domain and range.</li></ul>
+                  </li>
+                  <li class="fragment">
+                      <p>Linguistic characteristics</p>
+                      <ul>
+                          <li class="fragment">String similarity:
+                            <ul>
+                                <li>
+                                    String distance metrics (e.g Jaro-Winkler distance, Damerau-Levenshtein distance)
+                                </li>
+                                <li>
+                                    Token-based techniques (e.g. Jaccard similarity, Cosine Similarity)
+                                </li>
+                            </ul>
+                      </li>
+                      <li class="fragment">
+                                  Semantic Similarity
+                                  <ul>
+                                      <li>
+                                          Synonyms (e.g., synsets in WordNet)
+                                      </li>
+                                  </ul>
+                      </li>
+                      </ul>
+                  </li>
+              </ul>
+
+          </section>
+
+          <section>
+              <h3>Our approach</h3>
+              <img style="height: 100%" src="img/apro.jpeg"/>
+          </section>
+
+
+          <section>
+              <h3>Enhanced Query</h3>
+              <pre>
+	    <code>
+PREFIX dbo: &lt;http://dbpedia.org/ontology/&gt;
+PREFIX dbp: &lt;http://dbpedia.org/property/&gt;
+
+select ?s ?bp  where {
+ ?s ?p ?bp .
+ VALUES ?p {
+  #Alternative dbp properties
+  dbp:birthPlace
+  dbp:birthPlcace dbp:birthplace  birthLocation
+  dbp:birhPlace   dbp:bithPlace   cityofbirth
+  dbp:birtPlace   dbp:biRthPlace  cityOfBirth 
+ }
+}
+            </code>
+          </pre>
+          </section>
+
+
+          <section>
+              <h3>Evaluation</h3>
+              <ul>
+                  <li>Datasets: English, Spanish, German DBpedia datasets</li>
+                  <li>Queries: Query logs from Linked SPARQL Queries Dataset</li>
+                  <li>Analysis: Number of results before and after the enhancement</li>
+                  <li>Results were improved in most cases upto 300%</li>
+                  <li>Impact on quality of the results to be analyzed</li>
+              </ul>
+          </section>
+
+
+          <section>
+              <h3>Conclusions</h3>
+              <ul>
+                  <li>A lot of redundant properties in DBpedia.
+                      <ul>
+                          <li>Neither Wikipedia (Infobox keys) nor the extraction process (missing mappings) is perfect.</li>
+                      </ul>
+                  </li>
+                  <li>Low usage of such properties lead to incomplete answers in SPARQL queries.</li>
+                  <li>Results can be improved by enhancing SPARQL queries with semantically-equivalent properties.</li>
+              </ul>
+          </section>
+
+	
+        <section>
+          <h1>Thank you!</h1>
+          <p>Mail: <a href="mailto:nmihindu@fi.upm.es">nmihindu@fi.upm.es</a></p>
+          <p>Twitter: <a href="http://twitter.com/nandanamihindu">@nandanamihindu</a></p>
+        </section>
+        
+      </div>
     </div>
-
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
-        <h3>
-<a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
-
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
-
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
-
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
-
-<h3>
-<a name="designer-templates" class="anchor" href="#designer-templates"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
-
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
-
-<h3>
-<a name="rather-drive-stick" class="anchor" href="#rather-drive-stick"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
-<a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a name="support-or-contact" class="anchor" href="#support-or-contact"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
-      </section>
-    </div>
-
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
-      </footer>
-    </div>
-
-    
-
+    <script src="lib/js/head.min.js"></script>
+    <script src="js/reveal.js"></script>
+    <script>
+      // Full list of configuration options available at:
+      // https://github.com/hakimel/reveal.js#configuration
+      Reveal.initialize({
+      controls: true,
+      progress: true,
+      history: true,
+      center: true,
+      transition: 'slide', // none/fade/slide/convex/concave/zoom
+      // Optional reveal.js plugins
+      dependencies: [
+      { src: 'lib/js/classList.js', condition: function() { return !document.body.classList; } },
+      { src: 'plugin/markdown/marked.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
+      { src: 'plugin/markdown/markdown.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
+      { src: 'plugin/highlight/highlight.js', async: true, condition: function() { return !!document.querySelector( 'pre code' ); }, callback: function() { hljs.initHighlightingOnLoad(); } },
+      { src: 'plugin/zoom-js/zoom.js', async: true },
+      { src: 'plugin/notes/notes.js', async: true }
+      ]
+      });
+    </script>
+    <script async src="//platform.twitter.com/widgets.js" charset="utf-8">
+    </script>
+    <script>
+      window.twttr = (function(d, s, id) {
+      var js, fjs = d.getElementsByTagName(s)[0],
+      t = window.twttr || {};
+      if (d.getElementById(id)) return t;
+      js = d.createElement(s);
+      js.id = id;
+      js.src = "https://platform.twitter.com/widgets.js";
+      fjs.parentNode.insertBefore(js, fjs);
+      t._e = [];
+      t.ready = function(f) {
+      t._e.push(f);
+      };
+      return t;
+      }(document, "script", "twitter-wjs"));
+    </script>
   </body>
 </html>
+
