--- a/sdsvoc/index.html
+++ b/sdsvoc/index.html
@@ -323,7 +323,7 @@ ex:RestaurantShape a sh:Shape ;
       }(document, "script", "twitter-wjs"));
     </script>
       
-    <script src="/js/jquery-2.2.4.min.js"></script>
+    <script src="js/jquery-2.2.4.min.js"></script>
     <script type="text/javascript">
     // 3. On Reveal.js ready event, copy header/footer <div> into each `.slide-background` <div>
     var header = $('#header').html();
