--- a/sdsvoc/index.html
+++ b/sdsvoc/index.html
@@ -91,7 +91,7 @@
         <ul>
           <li>Dataset searches
                 <ul>
-                    <li><a href="https://datahub.io/">datahub</a>, <a href="http://lodsearch.org/">lodsearch.org</a>, Sindice, Semplore, VisiNav, Semantic Sitemaps, DING!, ...</li>
+                    <li><a href="https://datahub.io/">datahub</a>, <a href="http://lodsearch.org/">lodsearch.org</a>, <a href="http://www.sindice.com/">Sindice</a>, <a href="http://www.sciencedirect.com/science/article/pii/S1570826809000262">Semplore</a>, <a href="http://www.sciencedirect.com/science/article/pii/S1570826810000600">VisiNav</a>, <a href="http://www.renaud.delbru.fr/doc/pub/eswc2008-sitemap.pdf">Semantic Sitemaps</a>, DING!, ...</li>
                 </ul>
             </li>
         </ul>
