--- a/sdsvoc/index.html
+++ b/sdsvoc/index.html
@@ -60,7 +60,7 @@
 	
         <section>
           <h2>An RDF Dataset Description Model <br/>for Expressing Vocabulary Usage Patterns</h2>
-          <img src="img/loupe.png" style="background : 0; margin : 0; border : 0; box-shadow : none;" />   
+          <a href="http://loupe.linkeddata.es/"><img src="img/loupe.png" style="background : 0; margin : 0; border : 0; box-shadow : none;" /> </a>  
 	      <h5><b>Nandana Mihindukulasooriya</b>, María Poveda-Villalón, Raúl García-Castro, Asunción Gómez-Pérez </h5>
           <h5>Ontology Engineering Group, Universidad Politécnica de Madrid</h5>
           <h5>Acknowledgments:<br/>
