--- a/sdsvoc/index.html
+++ b/sdsvoc/index.html
@@ -116,7 +116,7 @@
               </ul>
           </li>
           <li class="fragment">
-            <span style="color: green;">so that I </span> can <b>use data from the LOD cloud </b> without spending days for manual inspection. 
+            <span style="color: green;">so that I </span> can <b>use data from the LOD cloud </b> without spending days of manual inspection. 
           </li>   
         </ul>
 	</section>
