--- a/sdsvoc/index.html
+++ b/sdsvoc/index.html
@@ -89,7 +89,7 @@
             </li>
         </ul>
         <ul>
-          <li>Dataset searches
+          <li>Dataset searche engines
                 <ul>
                     <li><a href="https://datahub.io/">datahub</a>, <a href="http://lodsearch.org/">lodsearch.org</a>, <a href="http://www.sindice.com/">Sindice</a>, <a href="http://www.sciencedirect.com/science/article/pii/S1570826809000262">Semplore</a>, <a href="http://www.sciencedirect.com/science/article/pii/S1570826810000600">VisiNav</a>, <a href="http://www.renaud.delbru.fr/doc/pub/eswc2008-sitemap.pdf">Semantic Sitemaps</a>, DING!, ...</li>
                 </ul>
