--- a/sdsvoc/index.html
+++ b/sdsvoc/index.html
@@ -124,7 +124,7 @@
     <section>
         <h3>Use Case I - Example</h3>
         <ul>
-           <li>I want to find training data for a classifier that categorizes <b>restaurants</b> according their <b>cuisine</b> based on the restaurant's <b>description</b>. </li> 
+           <li>I want to find training data for a ML classifier that categorizes <b>restaurants</b> according their <b>cuisine</b> based on the restaurant's <b>description</b>. </li> 
         </ul>
         <div class="fragment left">    
               <pre>
