--- a/sdsvoc/index.html
+++ b/sdsvoc/index.html
@@ -12,7 +12,8 @@
       });
     </script>
     <script type="text/javascript" async src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-MML-AM_CHTML"></script>
-    <meta name="description" content="EKAW2016">
+    <meta name="description" content="Slides for W3C Smart Descriptions & Smarter Vocabularies (SDSVoc)">
+    <meta name="keywords" content="RDF, Dataset, Description, Loupe, Discovery, Quality">  
     <meta name="author" content="Nandana Mihindukulasooriya">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
